testsuite/tests/typecheck/should_fail/tcfail033.stderr

tcfail033.hs:4:12: error:
    • Occurs check: cannot construct the infinite type: t1 ~ (t1, t)
    • In the expression: x
      In the expression: [x | (x, y) <- buglet]
      In an equation for ‘buglet’: buglet = [x | (x, y) <- buglet]
    • Relevant bindings include
        y :: t (bound at tcfail033.hs:4:19)
        x :: t1 (bound at tcfail033.hs:4:17)
        buglet :: [(t1, t)] (bound at tcfail033.hs:4:1)
